# ChangeLog for dev-libs/gmime
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.59 2007/05/30 15:36:10 armin76 Exp $

  30 May 2007; Raúl Porcel <armin76@gentoo.org> gmime-2.2.3.ebuild:
  alpha stable wrt #164844

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  02 Feb 2007; Luis Medinas <metalgod@gentoo.org> gmime-2.2.3.ebuild:
  Stable on amd64. Bug #164700.

  01 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> gmime-2.2.3.ebuild:
  Stable on sparc

  31 Jan 2007; Andrej Kacian <ticho@gentoo.org> gmime-2.2.3.ebuild:
  Stable on x86, bug #164700.

  31 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org> gmime-2.2.3.ebuild:
  Stable on ppc wrt bug #164700.

  02 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> gmime-2.2.3.ebuild:
  Add ~x86-fbsd keyword.

*gmime-2.2.3 (02 Jan 2007)

  02 Jan 2007; Andrej Kacian <ticho@gentoo.org> +gmime-2.2.3.ebuild:
  Version bump.

  02 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> gmime-2.2.1.ebuild:
  Run elibtoolize, as the package installs a shared library.

  03 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> gmime-2.1.19.ebuild:
  hppa stable

  29 Aug 2006; Fernando J. Pereda <ferdy@gentoo.org> gmime-2.2.1.ebuild:
  Add ~alpha keyword

  17 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> gmime-2.1.19.ebuild:
  Stable on sparc

  12 Aug 2006; Markus Rothe <corsair@gentoo.org> gmime-2.2.1.ebuild:
  Added ~ppc64; bug #142589

  17 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> gmime-2.1.19.ebuild:
  Marked stable on amd64 for bug #139612

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> gmime-2.1.19.ebuild,
  gmime-2.2.1.ebuild:
  Added ~hppa

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> gmime-2.1.19.ebuild:
  ppc stable, bug #139612

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> gmime-2.1.19.ebuild:
  Stable on x86 wrt bug #139612.

*gmime-2.2.1 (20 Apr 2006)
