@@ -1,3 +1,0 @@
-MD5 bf5c74ddaf6bc5e06d9f9abc423ca4db gmime-2.1.14.tar.gz 800074
-RMD160 de964d855beec042b01eb6e6b911472895d5f09b gmime-2.1.14.tar.gz 800074
-SHA256 7edc43d07cedc1c737a569f262e168ca605dbc3d30d12dde582d7c8aeaac6a06 gmime-2.1.14.tar.gz 800074
