@@ -1,3 +1,0 @@
-MD5 c6df963c6e502f2da57ebb33143b40af gmime-2.1.15.tar.gz 761079
-RMD160 bbd3940df78557c8e05039094ab3f72fe9df4c12 gmime-2.1.15.tar.gz 761079
-SHA256 5fb173c366f5e12c8527b5f2f2b024ee53677acaf0d821809ed02803c444e7b4 gmime-2.1.15.tar.gz 761079
