@@ -1,3 +1,0 @@
-MD5 ca1992fba086c5dd0e7523b5eab4057c gmime-2.1.16.tar.gz 917350
-RMD160 1692d6c9095bd267f4bf155b594c8ea33e59dbee gmime-2.1.16.tar.gz 917350
-SHA256 d07a3fe33fa38e6ba144dd1459dd2c153f18d0f4da9291af1fa9fa8a0e997b24 gmime-2.1.16.tar.gz 917350
