@@ -1,3 +1,0 @@
-MD5 3c2524a89275b5924eb2e931629cd18b gmime-2.1.18.tar.gz 919670
-RMD160 4c59c24cb9da5e33b87ccf44cd66ab1f7daf34de gmime-2.1.18.tar.gz 919670
-SHA256 779352d31f0345f4ba1879a9b63ff2b7e9206c05d2b27ebd71cdf74c034e47b1 gmime-2.1.18.tar.gz 919670
