@@ -1,3 +1,0 @@
-MD5 8bd24a56d5f56be9150deb9840a0812a gmime-2.1.9.tar.gz 784545
-RMD160 430dae14274b17c4a44fe95c954d8e2f24198a2d gmime-2.1.9.tar.gz 784545
-SHA256 ac40de8bd5b101b4b0f42cab3b8e43e5135985dfae1094c1948730bf0ca63e11 gmime-2.1.9.tar.gz 784545
