@@ -1,3 +1,0 @@
-MD5 b05e4d6344c8465fb74386e5f1fed45c gmime-2.2.1.tar.gz 925765
-RMD160 8271abac9b0fef1fa4b31068bb4c791420e3d61b gmime-2.2.1.tar.gz 925765
-SHA256 b616dc9a579ab00f01e3ad38a8fbfaea3387fe6c7ed5bacfb858c49805a38b1a gmime-2.2.1.tar.gz 925765
