@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/gmime
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.59 2007/05/30 15:36:10 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.60 2007/11/18 00:46:24 compnerd Exp $
+
+  18 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  -gmime-2.1.9-r1.ebuild, -gmime-2.1.9-r2.ebuild, -gmime-2.1.9-r3.ebuild,
+  -gmime-2.1.14-r1.ebuild, -gmime-2.1.15-r1.ebuild, -gmime-2.1.16.ebuild,
+  -gmime-2.1.18.ebuild, -gmime-2.2.1.ebuild:
+  Prune unused versions
 
   30 May 2007; Raúl Porcel <armin76@gentoo.org> gmime-2.2.3.ebuild:
   alpha stable wrt #164844
